[package]
name = "mars-address-provider"
version = "1.0.0"
authors = ["Spike Spiegel <spikeonmars@protonmail.com>"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all init/handle/query exports
library = []

[dependencies]
mars-core = { path = "../../packages/mars-core", version = "1.0.0" }

terra-cosmwasm = "2.2.0"

cw-storage-plus = "0.9.0"

cosmwasm-std = "0.16.2"

thiserror = "1.0.23"

[dev-dependencies]
cosmwasm-schema = "0.16.2"
