[package]
name = "mars-address-provider"
version = "0.1.0"
authors = [
  "Spike Spiegel <spikeonmars@protonmail.com>",
  "larry_0x <larry@delphidigital.io>",
  "Piotr Babel <piotr@delphilabs.io>",
  "Ahmad Kaouk <ahmad@delphilabs.io>",
  "Harry Scholes"
]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all init/handle/query exports
library = []

[dependencies]
mars-outpost = { path = "../../packages/mars-outpost", version = "0.1.0" }
cosmwasm-std = "1.0"
cw-storage-plus = "0.13"
thiserror = "1.0.31"

[dev-dependencies]
cosmwasm-schema = "1.0"
serde = "1.0.137"
