[package]
name = "mars-protocol-rewards-collector"
version = "1.0.0"
authors = ["Harry Scholes <harryscholes@users.noreply.github.com>"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
mars-core = { path = "../../packages/mars-core", version = "1.0.0" }

cw20 = "0.9.0"
cw20-base = { version = "0.9.0", features = ["library"] }
cw-storage-plus = "0.9.0"

cosmwasm-std = "0.16.2"

schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = "1.0.23"

[dev-dependencies]
cosmwasm-schema = { version = "0.16.2" }
