[package]
name = "mars-protocol-rewards-collector"
version = "1.0.0"
authors = [
  "Ahmad Kaouk <ahmad@delphilabs.io>",
  "Spike Spiegel <spikeonmars@protonmail.com>",
  "larry_0x <larry@delphidigital.io>",
  "Piotr Babel",
  "Harry Scholes"
]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
mars-outpost = { path = "../../packages/mars-outpost", version = "0.1.0" }

cw20 = "0.13"
cw20-base = { version = "0.13", features = ["library"] }
cw-storage-plus = "0.13"

cosmwasm-std = { version = "1.0", features = ["stargate"] }

schemars = "0.8.8"
serde = { version = "1.0.137", default-features = false, features = ["derive"] }
thiserror = "1.0.31"

astroport = "1.0"
osmo-bindings = "0.5.1"

[dev-dependencies]
cosmwasm-schema = { version = "1.0" }

[profile.release]
overflow-checks = true
