[package]
name = "mars-rewards-collector-base"
version = "0.1.0"
authors = [
  "Ahmad Kaouk <ahmad@delphilabs.io>",
  "Spike Spiegel <spikeonmars@protonmail.com>",
  "larry_0x <larry@delphidigital.io>",
  "Piotr Babel <piotr@delphilabs.io>",
  "Harry Scholes"
]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
mars-outpost = { path = "../../packages/mars-outpost", version = "0.1.0" }
cosmwasm-std = { version = "1.0", features = ["stargate"] }
cw-storage-plus = "0.13"
schemars = "0.8.8"
serde = { version = "1.0.137", default-features = false, features = ["derive"] }
thiserror = "1.0.31"

[dev-dependencies]
mars-testing = { version = "0.1.0", path = "../../packages/mars-testing" }
