[package]
name = "mars-xmars-token"
version = "1.0.0"
authors = ["Spike Spiegel  <spikeonmars@protonmail.com>"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all init/handle/query exports
library = []

[dependencies]
mars-core = { path = "../../packages/mars-core", version = "1.0.0" }

cw0 = "0.9.0"
cw2 = "0.9.0"
cw20 = "0.9.0"
cw20-base = { version = "0.9.0", features = ["library"] }
cw-storage-plus = "0.9.0"

cosmwasm-std = "0.16.2"

schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = "1.0.23"

[dev-dependencies]
cosmwasm-schema = "0.16.2"

[profile.release]
overflow-checks = true
