[package]
name          = "mars-mock-incentives"
version       = { workspace = true }
authors       = { workspace = true }
license       = { workspace = true }
edition       = { workspace = true }
repository    = { workspace = true }
homepage      = { workspace = true }
documentation = { workspace = true }
keywords      = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []

[dependencies]
cosmwasm-std    = { workspace = true }
cw-paginate     = { workspace = true }
cw-storage-plus = { workspace = true }
mars-types      = { workspace = true }
