[package]
name          = "mars-mock-pyth"
description   = "Mocked version of the Pyth oracle contract"
version       = { workspace = true }
authors       = { workspace = true }
license       = { workspace = true }
edition       = { workspace = true }
repository    = { workspace = true }
homepage      = { workspace = true }
documentation = { workspace = true }
keywords      = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]
doctest    = false

[features]
library = []

[dependencies]
cosmwasm-std    = { workspace = true }
pyth-sdk-cw     = { workspace = true }
