[package]
name = "mock-red-bank"
version = "1.0.0"
authors = ["larry_0x <larry@delphidigital.io>, grod220 <gabe.r@delphilabs.io>"]
edition = "2021"
license = "GPL-3.0-or-later"
repository = "https://github.com/mars-protocol/rover"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
mars-outpost = { version = "0.1", path = "../../../outposts/packages/outpost" }

cosmwasm-schema = "1.1"
cosmwasm-std = "1.1"
cw-storage-plus = "0.14"
schemars = "0.8"
serde = { version = "1.0", default-features = false, features = ["derive"] }
