[package]
name          = "mars-mock-red-bank"
version       = { workspace = true }
authors       = { workspace = true }
license       = { workspace = true }
edition       = { workspace = true }
repository    = { workspace = true }
homepage      = { workspace = true }
documentation = { workspace = true }
keywords      = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []

[dependencies]
cosmwasm-schema = { workspace = true }
cosmwasm-std    = { workspace = true }
cw-paginate     = { workspace = true }
cw-storage-plus = { workspace = true }
cw-utils        = { workspace = true }
mars-types      = { workspace = true }
