[package]
name          = "mars-mock-vault"
version       = { workspace = true }
authors       = { workspace = true }
license       = { workspace = true }
edition       = { workspace = true }
repository    = { workspace = true }
homepage      = { workspace = true }
documentation = { workspace = true }
keywords      = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
library    = []

[dependencies]
cosmwasm-schema   = { workspace = true }
cosmwasm-std      = { workspace = true }
cw-storage-plus   = { workspace = true }
cw-utils          = { workspace = true }
cw-vault-standard = { workspace = true }
mars-rover        = { workspace = true }
thiserror         = { workspace = true }
