[package]
name          = "mars-params"
description   = "Contract storing the asset params for Credit Manager and Red Bank."
version       = { workspace = true }
authors       = { workspace = true }
license       = { workspace = true }
edition       = { workspace = true }
repository    = { workspace = true }
homepage      = { workspace = true }
documentation = { workspace = true }
keywords      = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]
doctest    = false

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
library    = []

[dependencies]
astroport-v5       = { workspace = true }
cosmwasm-schema    = { workspace = true }
cosmwasm-std       = { workspace = true }
cw2                = { workspace = true }
cw-paginate        = { workspace = true }
cw-storage-plus    = { workspace = true }
mars-interest-rate = { workspace = true }
mars-owner         = { workspace = true }
mars-types         = { workspace = true }
mars-utils         = { workspace = true }
thiserror          = { workspace = true }

[dev-dependencies]
anyhow        = { workspace = true }
cw-multi-test = { workspace = true }
mars-testing  = { workspace = true }
test-case     = { workspace = true }
