[package]
name          = "mars-red-bank"
version       = { workspace = true }
authors       = { workspace = true }
edition       = { workspace = true }
repository    = { workspace = true }
homepage      = { workspace = true }
documentation = { workspace = true }
keywords      = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-std              = { workspace = true }
cw2                       = { workspace = true }
cw-controllers-admin-fork = { workspace = true }
cw-storage-plus           = { workspace = true }
cw-utils                  = { workspace = true }
mars-health               = { workspace = true }
mars-outpost              = { workspace = true }
thiserror                 = { workspace = true }

[dev-dependencies]
cosmwasm-schema = "1.1"
mars-testing    = { workspace = true }
