[package]
name          = "mars-red-bank"
description   = "A smart contract that manages asset deposit, borrowing, and liquidations"
version       = { workspace = true }
authors       = { workspace = true }
edition       = { workspace = true }
license       = { workspace = true }
repository    = { workspace = true }
homepage      = { workspace = true }
documentation = { workspace = true }
keywords      = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]
doctest    = false

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
library    = []

[dependencies]
cosmwasm-schema    = { workspace = true }
cosmwasm-std       = { workspace = true }
cw2                = { workspace = true }
cw-paginate        = { workspace = true }
cw-storage-plus    = { workspace = true }
cw-utils           = { workspace = true }
mars-health        = { workspace = true }
mars-interest-rate = { workspace = true }
mars-liquidation   = { workspace = true }
mars-owner         = { workspace = true }
mars-types         = { workspace = true }
mars-utils         = { workspace = true }
thiserror          = { workspace = true }

[dev-dependencies]
anyhow        = { workspace = true }
cw-multi-test = { workspace = true }
mars-testing  = { workspace = true }
test-case     = { workspace = true }
